Fix SpringBoot test